--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <body>
         <div class="app">
             <h1>Apache Cordova</h1>
-          <button onclick="barcodescanner()">Click Here</button>
+          <button onclick="barcodescanner();">Click Here</button>
         </div>
      
         <script type="text/javascript" src="js/index.js"></script>
